Navbar Logo changes and automatic footer date formater

--- a/cialde.html
+++ b/cialde.html
@@ -14,18 +14,19 @@
     <header>
       <p><i class="fas fa-envelope"></i> Vsa povpraševanja se pošljejo na naš e-mail: <a href="mailto:info@perosa.com">info@perosa.com</a></p>
     </header>
-  
+
     <nav class="navbar navbar-expand-lg navbar-dark">
-      <div class="container">
-        <a class="navbar-brand" href="index.html">Peroša</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-          aria-expanded="false" aria-label="Toggle navigation">
+      <div class="container jusify-content-center">
+        <a class="navbar-brand" href="index.html">
+          <img class="Logo-image" src="images/Logo-perosa.png" alt="Peroša Lusso kava Maribor">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Domov</a>
+              <a class="nav-link active" href="index.html">Domov</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">O Nas</a>
@@ -80,8 +81,8 @@
         <div class="col-md-6 order-md-1 d-flex flex-column justify-content-center text-content">
           <h3 class="product-title">Cialde/podsi ESE Espresso</h3>
           <p class="product-description">LUSSO caffè pods/cialda v papirnatem filtru, kremasta, polna in uravnotežena kava z okusom sveže pražene kave. Mešanica kave, sestavljena iz kakovostne arabice in robuste, zmešane z veliko pozornostjo, da se zagotovi ravnovesje in stabilnost okusa, zaradi česar je ta kava popolna pijača za ob vsakem odmoru dneva. Okusite lusso kavo za kavne avtomate v podsih/cialdah.</p>
-          <p class="product-price"><strong>150 Podsov/ciald: 27,40 € brez DDV</strong></p>
-          <p class="product-shipping"><em>BREZPLAČNA DOSTAVA nad 450 kom znotraj SI</em></p>
+          <!--<p class="product-price"><strong>150 Podsov/ciald: 27,40 € brez DDV</strong></p>
+          <p class="product-shipping"><em>BREZPLAČNA DOSTAVA nad 450 kom znotraj SI</em></p> -->
         </div>
       </div>
 
@@ -92,8 +93,8 @@
         <div class="col-md-6 d-flex flex-column justify-content-center text-content">
           <h3 class="product-title">Cialde/podsi ESE Brezkofeinska/DECAFFE</h3>
           <p class="product-description">Brezkofeinska kava LUSSO v papirnatem filtru, je kakovostna, kremasta in polnega telesa s popolno uravnoteženim okusom ter jantarne barve. Uživajte v kavi, DECAFFE v baru, doma ali v pisarni.</p>
-          <p class="product-price"><strong>50 Podsov/ciald: 18,27 € brez DDV</strong></p>
-          <p class="product-shipping"><em>BREZPLAČNA DOSTAVA nad 450 kom znotraj SI</em></p>
+          <!-- <p class="product-price"><strong>50 Podsov/ciald: 18,27 € brez DDV</strong></p>
+          <p class="product-shipping"><em>BREZPLAČNA DOSTAVA nad 450 kom znotraj SI</em></p> -->
         </div>
       </div>
     </section>
