--- a/kava.html
+++ b/kava.html
@@ -67,20 +67,21 @@
 <body>
   <div class="sticky-top">
     <header>
-      <p><i class="fas fa-envelope"></i> Vsa povpraševanja se pošljejo na naš e-mail: <a href="mailto:info@perosa.com" style="color: #6f4e37; font-weight: bold;">info@perosa.com</a></p>
+      <p><i class="fas fa-envelope"></i> Vsa povpraševanja se pošljejo na naš e-mail: <a href="mailto:info@perosa.com">info@perosa.com</a></p>
     </header>
 
     <nav class="navbar navbar-expand-lg navbar-dark">
-      <div class="container">
-        <a class="navbar-brand" href="index.html">Peroša</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-          aria-expanded="false" aria-label="Toggle navigation">
+      <div class="container jusify-content-center">
+        <a class="navbar-brand" href="index.html">
+          <img class="Logo-image" src="images/Logo-perosa.png" alt="Peroša Lusso kava Maribor">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Domov</a>
+              <a class="nav-link active" href="index.html">Domov</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">O Nas</a>
