--- a/splosni-pogoji.html
+++ b/splosni-pogoji.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
+    <title>Peroša - Splošni Pogoji</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -21,12 +21,13 @@
         <header>
           <p><i class="fas fa-envelope"></i> Vsa povpraševanja se pošljejo na naš e-mail: <a href="mailto:info@perosa.com">info@perosa.com</a></p>
         </header>
-      
+    
         <nav class="navbar navbar-expand-lg navbar-dark">
-          <div class="container">
-            <a class="navbar-brand" href="index.html">Peroša</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-              aria-expanded="false" aria-label="Toggle navigation">
+          <div class="container jusify-content-center">
+            <a class="navbar-brand" href="index.html">
+              <img class="Logo-image" src="images/Logo-perosa.png" alt="Peroša Lusso kava Maribor">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
