--- a/prodaja.html
+++ b/prodaja.html
@@ -1,49 +1,52 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>Prodaja Gostinskih Aparatov - Peroša</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="styles.css">
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  </head>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
   <body>
     <div class="sticky-top">
-      <header>
-        <p><i class="fas fa-envelope"></i> Vsa povpraševanja se pošljejo na naš e-mail: <a href="mailto:info@perosa.com">info@perosa.com</a></p>
-      </header>
-  
-      <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container jusify-content-center">
-          <a class="navbar-brand" href="index.html">
-            <img class="Logo-image" src="images/Logo-perosa.png" alt="Peroša Lusso kava Maribor">
-          </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link active" href="index.html">Domov</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about.html">O Nas</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="products.html">Izdelki</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Kontakt</a>
-              </li>
-            </ul>
+        <header>
+          <p><i class="fas fa-envelope"></i> Vsa povpraševanja se pošljejo na naš e-mail: <a href="mailto:info@perosa.com">info@perosa.com</a></p>
+        </header>
+    
+        <nav class="navbar navbar-expand-lg navbar-dark">
+          <div class="container jusify-content-center">
+            <a class="navbar-brand" href="index.html">
+              <img class="Logo-image" src="images/Logo-perosa.png" alt="Peroša Lusso kava Maribor">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                  <a class="nav-link active" href="index.html">Domov</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="about.html">O Nas</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="products.html">Izdelki</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contact.html">Kontakt</a>
+                </li>
+              </ul>
+            </div>
           </div>
-        </div>
-      </nav>
+        </nav>
+      </div>
     </div>
 
-      
+
+    <!-- Footer -->
     <footer class="bg-dark text-white text-center py-4">
         <div class="container">
           <div class="row">
@@ -77,6 +80,7 @@
         <p class="mt-3 footer-credits">&copy; 2024 Peroša. Vse pravice pridržane.</p>
         <a href="splosni-pogoji.html" class="footer-a">Pogoji poslovanja</a>
       </footer>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
