changes to hero

--- a/index.html
+++ b/index.html
@@ -15,11 +15,6 @@
       width: 100%;
       max-height: fit-content;
     }
-    
-    .Logo-image {
-      width: 100px;
-      margin-right: 100px;
-    }
 
     .btn-about {
       background-color: #6f4e37;
@@ -128,13 +123,13 @@
               <a class="nav-link active" href="index.html">Domov</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">O Nas</a>
+              <a class="nav-link" href="about.html">O NAS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="products.html">Izdelki</a>
+              <a class="nav-link" href="products.html">IZDELKI</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Kontakt</a>
+              <a class="nav-link" href="contact.html">KONTAKT</a>
             </li>
             <li class="nav-item">
               <a href="kava.html" class="nav-link">KAVA</a>
@@ -149,7 +144,7 @@
               <a href="servis.html" class="nav-link">SERVIS</a>
             </li>
             <li class="nav-item">
-              <a href="cistila.html" class="nav-link">CISTILA</a>
+              <a href="cistila.html" class="nav-link">ČISTILA</a>
             </li>
             <li class="nav-item">
               <a href="prodaja.html" class="nav-link">GOSTINSKI APARATI</a>
@@ -167,7 +162,7 @@
         <p class="lead" id="hero-subtitle">Najboljša kavna storitev v mestu. Ponujamo gostinske storitve in dobavo kave.</p>
         <button class="button-hero" id="scroll-to-categories">Preglej ponudbo</button>
       </div>
-    </section>
+    </section>    
 
     <section class="about-us" id="about-us">
       <div class="container">
