added elements to cistila.html, and kava.html

--- a/kava.html
+++ b/kava.html
@@ -157,6 +157,35 @@
         </div>
       </div>
     </section>
+
+    <section id="sugar-cookies" class="my-5">
+      <div class="text-center mb-5">
+        <h2 class="mb-4">Sladkorji in Piskoti</h2>
+      </div>
+
+      <!-- Sugar Products -->
+      <div class="row mb-5 align-items-center product-display">
+        <div class="col-md-6 order-md-2">
+          <img src="images/sugar/sugar-packets.jpg" class="img-fluid" alt="Pakirani sladkor">
+        </div>
+        <div class="col-md-6 order-md-1 d-flex flex-column justify-content-center text-content">
+          <h3 class="product-title">Pakirani Sladkor</h3>
+          <p class="product-description">Sladkor, servirni (beli, trstni, rjavi). Povezava: <a href="https://www.pakirnica.si/" target="_blank">PAKIRNICA TIMS d.o.o. – pakirnica sladkorja</a></p>
+        </div>
+      </div>
+
+      <!-- Cookies and Crispies -->
+      <div class="row mb-5 align-items-center product-display">
+        <div class="col-md-6">
+          <img src="images/cookies/cookies-crispies.jpg" class="img-fluid" alt="Piskotki in Crispiji">
+        </div>
+        <div class="col-md-6 d-flex flex-column justify-content-center text-content">
+          <h3 class="product-title">Piskoti in Crispiji</h3>
+          <p class="product-description">Popoln dodatek k vaši kavi – izberite med različnimi piskoti in crispiji, ki bodo dopolnili vašo kavno izkušnjo.</p>
+        </div>
+      </div>
+    </section>
+    
   </main>
 
   <footer class="bg-dark text-white text-center py-4">
