--- a/cistila.html
+++ b/cistila.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>Čistila - Peroša</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -16,7 +16,7 @@
       </header>
   
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container jusify-content-center">
+        <div class="container justify-content-center">
           <a class="navbar-brand" href="index.html">
             <img class="Logo-image" src="images/Logo-perosa.png" alt="Peroša Lusso kava Maribor">
           </a>
@@ -41,42 +41,88 @@
           </div>
         </div>
       </nav>
-    </div>  
+    </div>
 
+    <section class="container my-5">
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <h1>Čistila Peroša</h1>
+          <p class="lead">Odkrijte našo vrhunsko linijo čistil in pripomočkov za čiščenje.</p>
+          <hr class="my-4">
+          <p>**1. Lorem ipsum dolor sit amet, consectetur adipiscing elit.** Vivamus lacinia odio vitae vestibulum vestibulum. Cras venenatis euismod malesuada.</p>
+        </div>
+      </div>
+    </section>
 
+    <section class="container my-5">
+      <h2 class="text-center mb-4">Profesionalna čistila</h2>
+      <div class="row">
+        <div class="col-md-6 offset-md-3">
+          <img src="images/professional-cleaning.jpg" class="img-fluid mb-4" alt="Profesionalna čistila">
+          <p>**2. Lorem ipsum dolor sit amet, consectetur adipiscing elit.** Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="container my-5">
+      <h2 class="text-center mb-4">Vozički in pripomočki za čiščenje</h2>
+      <div class="row">
+        <div class="col-md-6">
+          <img src="images/cleaning-carts.jpg" class="img-fluid mb-4" alt="Vozički za čiščenje">
+        </div>
+        <div class="col-md-6">
+          <p>**3. Lorem ipsum dolor sit amet, consectetur adipiscing elit.** Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="container my-5">
+      <h2 class="text-center mb-4">Papir in podajalniki</h2>
+      <div class="row">
+        <div class="col-md-6">
+          <p>**4. Lorem ipsum dolor sit amet, consectetur adipiscing elit.** Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        </div>
+        <div class="col-md-6">
+          <img src="images/paper-dispensers.jpg" class="img-fluid mb-4" alt="Papir in podajalniki">
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
     <footer class="bg-dark text-white text-center py-4">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-6 text-left">
-              <h4 class="footer-title">Hitre Povezave</h4>
-              <ul class="footer-links">
-                <li><a href="index.html" class="footer-link">Domov</a></li>
-                <li><a href="about.html" class="footer-link">O Nas</a></li>
-                <li><a href="products.html" class="footer-link">Izdelki</a></li>
-                <li><a href="cialde.html" class="footer-link">Cialde</a></li>
-                <li><a href="contact.html" class="footer-link">Kontakt</a></li>
-              </ul>
-            </div>
-            <div class="col-md-6 text-left contact-info">
-              <h4 class="footer-title about-contact-title">Kontaktirajte Nas</h4>
-              <p><i class="fas fa-map-marker-alt mr-2"></i>Pavel Peroša s.p., Vršnik 5, 2201 Zgornja Kungota, Slovenija</p>
-              <p><i class="fas fa-phone-alt mr-2"></i>Telefonska številka: +386 40 568 073</p>
-              <p><i class="fas fa-envelope mr-2"></i>E-pošta: <a href="mailto:pavelperosa@gmail.com" class="footer-link-mail">pavelperosa@gmail.com</a></p>
-            </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 text-left">
+            <h4 class="footer-title">Hitre Povezave</h4>
+            <ul class="footer-links">
+              <li><a href="index.html" class="footer-link">Domov</a></li>
+              <li><a href="about.html" class="footer-link">O Nas</a></li>
+              <li><a href="products.html" class="footer-link">Izdelki</a></li>
+              <li><a href="cialde.html" class="footer-link">Cialde</a></li>
+              <li><a href="contact.html" class="footer-link">Kontakt</a></li>
+            </ul>
           </div>
-          <div class="row mt-3">
-            <div class="col-md-12 text-center">
-              <div class="social-icons">
-                <a href="#" class="mr-3"><i class="fab fa-facebook fa-2x"></i></a>
-                <a href="#" class="mr-3"><i class="fab fa-twitter fa-2x"></i></a>
-                <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
-              </div>
+          <div class="col-md-6 text-left contact-info">
+            <h4 class="footer-title about-contact-title">Kontaktirajte Nas</h4>
+            <p><i class="fas fa-map-marker-alt mr-2"></i>Pavel Peroša s.p., Vršnik 5, 2201 Zgornja Kungota, Slovenija</p>
+            <p><i class="fas fa-phone-alt mr-2"></i>Telefonska številka: +386 40 568 073</p>
+            <p><i class="fas fa-envelope mr-2"></i>E-pošta: <a href="mailto:pavelperosa@gmail.com" class="footer-link-mail">pavelperosa@gmail.com</a></p>
+          </div>
+        </div>
+        <div class="row mt-3">
+          <div class="col-md-12 text-center">
+            <div class="social-icons">
+              <a href="#" class="mr-3"><i class="fab fa-facebook fa-2x"></i></a>
+              <a href="#" class="mr-3"><i class="fab fa-twitter fa-2x"></i></a>
+              <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
             </div>
           </div>
         </div>
-        <p class="mt-3 footer-credits">&copy; 2024 Peroša. Vse pravice pridržane.</p>
-        <a href="splosni-pogoji.html" class="footer-a">Pogoji poslovanja</a>
-      </footer>
+      </div>
+      <p class="mt-3 footer-credits">&copy; 2024 Peroša. Vse pravice pridržane.</p>
+      <a href="splosni-pogoji.html" class="footer-a">Pogoji poslovanja</a>
+    </footer>
+    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
